--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "front-challenge",
+  "homepage": "https://HectorMu.github.io/front-challenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
     "react-moveable": "^0.33.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
